fix layout and add contact link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h2>About</h2>
                 <p>I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn.</p>
     </div>
+
     <div class="bios">
         <div id="projects">
             <h2>Projects</h2>
@@ -42,7 +43,7 @@
         </div>
     </div>
     <footer id="contact">
-        <p>Contact</p>
+        <span>Contact:&nbsp;</span><a href="https://www.linkedin.com/in/joel-borjesson-b1862023a">linkedin</a>
     </footer>
     <script src="script.js" async></script>
   </body>
