add content and adjust bio section width

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
         </label>
@@ -25,25 +25,41 @@
 
     <div id="about">
         <h2>About</h2>
-                <p>I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn. I like to learn.</p>
+                <p>I've always enjoyed puzzles and figuring out problems. Learning new tech has always been a passion for me. My first computer was a Commodore 64 at the age of five and I've grown with a keyboard close to me for as long as I can remember. I've worked professionally with computers since graduating with a degree in Information Systems and am currently a Senior Systems Administrator. I'm expanding my coding skills with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a> by following their Full Stack Developer path. This page is part of that path to showcase some projects and my skills. Thanks for visiting!</p>
     </div>
 
     <div class="bios">
         <div id="projects">
             <h2>Projects</h2>
             <div class="bioitem">
-                <p></p>
+                <ul>
+                    <li><a href="https://github.com/joel-borjesson/MixedMessages" target="_blank">Mixed Messages</a></li>
+                    <li>placeholder</li>
+                    <li>placeholder</li>
+                </ul>
             </div>
         </div>
         <div id="skills">
             <h2>Skills</h2>
             <div class="bioitem">
-                <p></p>
+                <ul>
+                    <li>SQL</li>
+                    <li>JavaScript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Crystal Reports</li>
+                    <li>Windows</li>
+                    <li>MacOS</li>
+                    <li>Linux</li>
+                    <li>MDM</li>
+                    <li>Microsoft 365</li>
+                    <li>Cybersecurity</li>
+                </ul>
             </div>
         </div>
     </div>
     <footer id="contact">
-        <span>Contact:&nbsp;</span><a href="https://www.linkedin.com/in/joel-borjesson-b1862023a">linkedin</a>
+        <span>Contact:&nbsp;</span><a href="https://www.linkedin.com/in/joel-borjesson-b1862023a" target="_blank">linkedin</a><span>&nbsp;|&nbsp;</span><a href="mailto:joelportfolio.ion025@passmail.net">Email</a>
     </footer>
     <script src="script.js" async></script>
   </body>
