create night mode functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
+                    <li><button onclick="nightToggle()">Night mode</button></li>
                     <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
@@ -53,7 +54,8 @@
                     <li>Linux</li>
                     <li>MDM</li>
                     <li>Microsoft 365</li>
-                    <li>Cybersecurity</li>
+                    <li>Cybersecurity</li>                    
+                    <li>GitHub</li>
                 </ul>
             </div>
         </div>
