fix bottom margin on safari mobile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>I've always enjoyed puzzles and figuring out problems. Learning new tech has always been a passion for me. My first computer was a Commodore 64 at the age of five and I've grown with a keyboard close to me for as long as I can remember. I've worked professionally with computers since graduating with a degree in Information Systems and am currently a Senior Systems Administrator. I'm expanding my coding skills with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a> by following their Full Stack Developer path. This page is part of that path to showcase some projects and my skills. Thanks for visiting!</p>
     </div>
 
-    <div class="bios">
+    <div class="bios safari_only">
         <div id="projects">
             <h2>Projects</h2>
             <div class="bioitem">
